# Algorithms-and-DS-1

./: .gitignore  README.md
hw1/: CountArrayRotations.cpp  Decode.cpp  DoublyLinkedList.cpp  taskA4_alg1.cpp  taskA4_alg2.cpp  taskA4_alg3.cpp  taskA5_findkey.hpp  taskA5_findkey_tests.cpp  taskP1.cpp
hw2/: a2.tex  a3.tex  a4.cpp  a4.tex  a4_2.cpp  p1.cpp  p1_in.txt  p1_in_2.txt  p2.cpp  p2_10.cpp  p2_ext.cpp  p2_s.cpp  p2_s_in.txt  p2_s_out.txt  p3.cpp  p3_in_1.txt  p3_in_2.txt  src.tex
hw3/: p1.cpp  p2.cpp  p3.cpp
hw3/a1/: a1.cpp  a1.tex  percntg_diff_tests.data  pi_values_tests.data
hw3/a2/: HybridSort.hpp  MergeSort.hpp  a2.cpp  a2.tex  hybrid_sort_10_rev_data.txt  hybrid_sort_10_rnd_data.txt  hybrid_sort_10_sorted_data.txt  hybrid_sort_20_rev_data.txt  hybrid_sort_20_rnd_data.txt  hybrid_sort_20_sorted_data.txt  hybrid_sort_50_rev_data.txt  hybrid_sort_50_rnd_data.txt  hybrid_sort_50_sorted_data.txt  hybrid_sort_5_rev_data.txt  hybrid_sort_5_rnd_data.txt  (+4 more)
hw3/a3/: a3.cpp  (+19 more)
hw4/: BTree.cpp  RBTree.cpp  btree_tests.cpp  p1.cpp  p2.cpp  rbtree_tests.cpp  splay-tree.cpp  splay_tree_tests.cpp
hw6/: a1.cpp  a1.tex  a2_table.tex  p1.cpp  p2.cpp  p2_.cpp  p3.cpp  p4.cpp  p5.cpp  p6.cpp
hw7/: a.cpp  b.cpp  c.cpp  c1.cpp  c2.cpp  c3.cpp  clipboardxx.hpp  d  d.cpp  e.cpp  e.in  f  f.cpp  f.in  f1.cpp  f1.s  f_dfs_rec.cpp  fgen  fgen.cpp  in.txt  p4.cpp  p7.cpp  p8  p8.cpp  p9.cpp  p9_tests.txt  re.bat  runc.bat  tmp.txt
hw8/: in.txt  main.ipynb  out.txt  p1  p1.cpp  p2  p2.cpp  p3  p3.cpp  p4  p4.cpp  p5  p5.cpp  p6  p6.cpp  p7  p7.cpp  p8  p8.cpp  q  q.cpp  q.s  qq.cpp  t  t.cpp
hw8/materials_p9/: CMakeLists.txt  LongInt.hpp  math_functions.hpp  p9  p9.cpp  p9_1  p9_1.cpp  p9_2  p9_2.cpp  p9_3  p9_3.cpp  p9_4  p9_4.cpp  p9_5  p9_5.cpp  p9_6  p9_6.cpp  p9_7  p9_7.cpp  p9_8  p9_8.cpp  p9_dp  p9_dp.cpp  p9_dp2  p9_dp2.cpp  p9_parallel  p9_parallel.cpp  p9_parallel_bfs  p9_parallel_bfs.cpp  p9_parallel_matrix_move  p9_parallel_matrix_move.cpp  p9_parallel_matrixmove  p9_parallel_matrixmove.cpp  p9_t67_parallel  p9_t67_parallel.cpp  res1  res1.lua  res10.lua  res1_old  res2  (+18 more)
hw8/materials_p9/solve/: dev_output1.txt  dev_output8.txt  output1.txt  output10.txt  output2.txt  output2_orig.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output7_trace.txt  output8.txt  output8_orig.txt  output9.txt  p9_generic_gen  p9_generic_gen.cpp  p9_t1  p9_t1.cpp  p9_t3  p9_t3.cpp  p9_t4  p9_t4.cpp  p9_t5  p9_t5.cpp
hw8/materials_p9/tests/: input10.txt  input2.txt  input3.txt  input5.txt  input8.txt
(+104 files in other folders)
